updated all home section translated

--- a/src/i18n/ar/translation.json
+++ b/src/i18n/ar/translation.json
@@ -43,6 +43,273 @@
           "image": "project_17.png"
         }
       ]
+    },
+    "ormSection": {
+      "title": "إدارة السمعة عبر الإنترنت وإدارة المكتب الخلفي المعتمدة على الذكاء الاصطناعي",
+      "description": "قم بإدارة سمعتك عبر الإنترنت لبناء الثقة، والتفاعل مع جمهورك، وتعزيز صورة علامتك التجارية.",
+      "features": [
+        {
+          "title": "بناء الثقة والمصداقية",
+          "description": "إقامة حضور قوي عبر الإنترنت لتعزيز الثقة والمصداقية بين جمهورك."
+        },
+        {
+          "title": "التفاعل مع جمهورك",
+          "description": "التفاعل الاستباقي مع العملاء من خلال المراجعات والتعليقات ووسائل التواصل الاجتماعي."
+        },
+        {
+          "title": "تعزيز صورة علامتك التجارية",
+          "description": "تحسين تصور العلامة التجارية من خلال تسليط الضوء على التجارب الإيجابية ومعالجة التعليقات السلبية."
+        }
+      ],
+      "learnMore": "تعلم أكثر"
+    },
+    "bannerDetails": {
+      "title": "نقوم ببناء تطبيقات تحظى بشعبية في عالم التطبيقات",
+      "description": "Birds OF EDEN هي شركة برمجيات مبتكرة مكرسة لتحويل الأفكار إلى واقع من خلال حلول تقنية مبتكرة. مهمتنا هي تمكين الشركات والأفراد من خلال برامج متقدمة تعزز الكفاءة والإنتاجية وتجربة المستخدم.",
+      "features": [
+        "تطوير برمجيات متخصص حسب احتياجاتك.",
+        "حلول مبتكرة تعزز النمو والنجاح.",
+        "الالتزام بالجودة وتجربة المستخدم المتميزة."
+      ],
+      "getStarted": "ابدأ الآن"
+    },
+    "dronePage": {
+      "title": "أحدث تقنياتنا",
+      "viewCollections": "عرض المجموعات",
+      "viewSpecs": "عرض المواصفات",
+      "specs": {
+        "flightTime": "وقت الطيران",
+        "range": "النطاق",
+        "camera": "الكاميرا"
+      },
+      "drones": [
+        {
+          "title": "AgriPrecision X1",
+          "description": "طائرة زراعية متقدمة مزودة بتقنية التصوير متعدد الأطياف ونظام رش دقيق وتحليل محاصيل مدعوم بالذكاء الاصطناعي.",
+          "image": "https://images.unsplash.com/photo-1579829366248-204fe8413f31?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80",
+          "specs": {
+            "flightTime": "45 دقيقة",
+            "range": "10 كم",
+            "camera": "متعدد الأطياف + 4K RGB"
+          }
+        }
+      ]
+    },
+    "projectGallery": {
+      "title": "مشاريعنا",
+      "description": "اكتشف حلولنا المبتكرة التي تدفع حدود التكنولوجيا وتحدث تأثيرًا ملموسًا لعملائنا.",
+      "modal": {
+        "overview": "نظرة عامة",
+        "description": "الوصف",
+        "close": "إغلاق"
+      },
+      "projects": [
+        {
+          "title": "التحقق من الهوية",
+          "description": "قم بتحميل إثبات هويتك للتحقق من التداول.",
+          "image": "project_1.png"
+        },
+        {
+          "title": "نظرة عامة على سوق الأسهم",
+          "description": "عرض كبار الرابحين، كبار الخاسرين، واتجاهات السوق بالتفصيل.",
+          "image": "project_2.png"
+        },
+        {
+          "title": "المحفظة وسجل المعاملات",
+          "description": "إدارة محفظتك وعرض سجل المعاملات.",
+          "image": "project_3.png"
+        },
+        {
+          "title": "منصة التجارة الإلكترونية",
+          "description": "حل حديث للتجارة الإلكترونية لشراء الكتب.",
+          "image": "project_4.png"
+        },
+        {
+          "title": "مجموعة الكتب",
+          "description": "تصفح وفلترا مجموعة واسعة من الكتب.",
+          "image": "project_5.png"
+        },
+        {
+          "title": "تحليلات لوحة المعلومات",
+          "description": "تصور البيانات مع الرسوم البيانية الشريطية والمخططات الخطية.",
+          "image": "project_6.png"
+        },
+        {
+          "title": "إدارة السمعة",
+          "description": "تحكم في سمعتك مع خدمات مخصصة.",
+          "image": "project_7.png"
+        },
+        {
+          "title": "عرض المنتجات",
+          "description": "عرض تفصيلي للمنتجات مع لافتات ترويجية.",
+          "image": "project_9.png"
+        },
+        {
+          "title": "التسعير والاشتراك",
+          "description": "خطط تسعير مرنة لتلبية احتياجات المستخدمين المختلفة.",
+          "image": "project_10.png"
+        },
+        {
+          "title": "جهات الاتصال في الحساب",
+          "description": "إدارة جهات الاتصال في الحساب وأذونات المستخدمين.",
+          "image": "project_11.png"
+        },
+        {
+          "title": "نظرة عامة على لوحة المعلومات",
+          "description": "لوحة معلومات شاملة مع تحليلات متقدمة.",
+          "image": "project_12.jpeg"
+        },
+        {
+          "title": "حاسبة تكاليف الانتقال",
+          "description": "احسب تكاليف الانتقال باستخدام نموذج تفاعلي.",
+          "image": "project_13.jpeg"
+        },
+        {
+          "title": "إدارة العملاء",
+          "description": "نظرة عامة على الحملات ومقاييس المشاركة للعملاء.",
+          "image": "project_14.png"
+        },
+        {
+          "title": "لوحة ملخص الإجراءات",
+          "description": "تتبع المهام والأنشطة والإنتاجية الشاملة.",
+          "image": "project_15.png"
+        }
+      ]
+    },
+    "clientPage": {
+      "title": "عملاؤنا",
+      "clients": [
+        {
+          "name": "برمجيات النحل",
+          "description": "توفر برمجيات النحل حلول برمجية متقدمة للأعمال، مع التركيز على الجودة ورضا العملاء.",
+          "logo": "ann-nahl.png",
+          "services": ["تطوير البرمجيات", "استشارات", "حلول مخصصة"],
+          "testimonial": "قامت برمجيات النحل بتحسين طريقة عملنا من خلال تقديم حلول برمجية عالية الجودة مخصصة لاحتياجاتنا."
+        },
+        {
+          "name": "بزموفينج",
+          "description": "تقدم بزموفينج تجربة نقل سلسة، حيث يتم التعامل مع جميع عمليات النقل بعناية ودقة.",
+          "logo": "buzzmoving.png",
+          "services": ["نقل سكني", "نقل تجاري", "خدمات التخزين"],
+          "testimonial": "جعلت بزموفينج انتقالنا خالياً من التوتر. فريقهم كفء واحترافي وموثوق."
+        },
+        {
+          "name": "ريبيوتيشن برايم",
+          "description": "تساعد ريبيوتيشن برايم الشركات في بناء والحفاظ على سمعة قوية عبر الإنترنت من خلال حلول إدارة السمعة الاستراتيجية.",
+          "logo": "repuprime.jpeg",
+          "services": [
+            "إدارة السمعة",
+            "مراقبة العلامة التجارية",
+            "إدارة الأزمات"
+          ],
+          "testimonial": "لعبت ريبيوتيشن برايم دورًا حيويًا في تعزيز سمعتنا وعلامتنا التجارية على الإنترنت."
+        },
+        {
+          "name": "وزارة الصحة السعودية",
+          "description": "توفر وزارة الصحة السعودية خدمات الرعاية الصحية والسياسات واللوائح الطبية لتعزيز الصحة العامة.",
+          "logo": "moh.png",
+          "services": [
+            "الصحة العامة",
+            "الخدمات الطبية",
+            "سياسات الرعاية الصحية"
+          ],
+          "testimonial": "حسنت وزارة الصحة بشكل كبير من وصولنا إلى خدمات الرعاية الصحية والمعلومات الطبية."
+        },
+        {
+          "name": "وزارة الموارد البشرية والتنمية الاجتماعية",
+          "description": "تعمل وزارة الموارد البشرية والتنمية الاجتماعية على بناء مجتمع مزدهر وسوق عمل جاذب.",
+          "logo": "HRSD.png",
+          "services": ["سياسات العمل", "التنمية الاجتماعية", "دعم التوظيف"],
+          "testimonial": "لعبت هذه الوزارة دورًا هامًا في خلق سوق عمل ديناميكي وشامل."
+        },
+        {
+          "name": "سدايا (الهيئة السعودية للبيانات والذكاء الاصطناعي)",
+          "description": "تعمل سدايا على تعزيز البيانات وحلول الذكاء الاصطناعي لدفع التحول الرقمي في السعودية.",
+          "logo": "sdaia.png",
+          "services": ["الذكاء الاصطناعي", "البيانات الضخمة", "التحول الرقمي"],
+          "testimonial": "ساهمت سدايا بشكل كبير في نمو المبادرات المعتمدة على الذكاء الاصطناعي والبيانات في المملكة."
+        },
+        {
+          "name": "حديقة عمان النباتية",
+          "description": "تعرض حديقة عمان النباتية تنوع النباتات في عمان، وتعزز الحفاظ على البيئة والتعليم.",
+          "logo": "OBG.png",
+          "services": ["الحفاظ على النباتات", "التعليم البيئي", "السياحة"],
+          "testimonial": "تقدم حديقة عمان النباتية تجربة غامرة في التنوع البيولوجي لعمان."
+        },
+        {
+          "name": "دار الأوبرا السلطانية مسقط",
+          "description": "تعد دار الأوبرا السلطانية مسقط الوجهة الأولى للعروض الموسيقية والثقافية في عمان، وتعزز التميز الفني.",
+          "logo": "ROHM.png",
+          "services": [
+            "الفنون الأدائية",
+            "الفعاليات الثقافية",
+            "التعليم الموسيقي"
+          ],
+          "testimonial": "تعتبر دار الأوبرا السلطانية مسقط جوهرة ثقافية، حيث تجلب العروض العالمية إلى عمان."
+        },
+        {
+          "name": "حكومة بنغلاديش",
+          "description": "يوفر البوابة الرسمية لحكومة بنغلاديش المعلومات والخدمات للمواطنين والشركات والزوار.",
+          "logo": "bangovt.png",
+          "services": [
+            "الخدمات الحكومية",
+            "الإدارة العامة",
+            "الحكومة الإلكترونية"
+          ],
+          "testimonial": "تقدم بوابة حكومة بنغلاديش تجربة سلسة للوصول إلى الخدمات الحكومية الأساسية."
+        },
+        {
+          "name": "موفينج كوت نيويورك",
+          "description": "تقدم موفينج كوت نيويورك عروض تأمين تنافسية، مما يساعد الأفراد والشركات في العثور على أفضل السياسات.",
+          "logo": "logo-png.png",
+          "services": ["عروض التأمين", "التخطيط المالي", "تقييم المخاطر"],
+          "testimonial": "ساعدتنا موفينج كوت نيويورك في العثور على خطة التأمين المثالية بأسعار لا تقارن."
+        },
+        {
+          "name": "موفينج تكساس",
+          "description": "تقدم موفينج تكساس خدمات نقل عالية الجودة للعملاء السكنيين والتجاريين في جميع أنحاء الولاية.",
+          "logo": "moving-texas.png",
+          "services": ["نقل سكني", "نقل تجاري", "حلول التخزين"],
+          "testimonial": "جعلت موفينج تكساس انتقالنا سلسًا وخاليًا من المتاعب بفضل فريقهم المحترف والموثوق."
+        }
+      ]
+    },
+    "blogPage": {
+      "title": "أحدث مقالاتنا",
+      "by": "بواسطة",
+      "readMore": "اقرأ المزيد",
+      "blogs": [
+        {
+          "id": 1,
+          "title": "قوة حلول ERP في نمو الأعمال",
+          "date": "15 فبراير، 2024",
+          "author": "ظلفيكر",
+          "image": "erp.png",
+          "description": "اكتشف كيف تعمل حلول ERP على تبسيط العمليات التجارية، وتحسين الكفاءة، وتحقيق النجاح في العصر الرقمي."
+        },
+        {
+          "id": 2,
+          "title": "كيف تُحدث الطائرات الزراعية بدون طيار ثورة في الزراعة",
+          "date": "10 مارس، 2024",
+          "author": "زيسان",
+          "image": "agricultural_drone.jpg",
+          "description": "تُحدث الطائرات الزراعية بدون طيار ثورة في الزراعة من خلال الرش الدقيق، ومراقبة المحاصيل، وزيادة الإنتاجية."
+        },
+        {
+          "id": 3,
+          "title": "الطائرات بدون طيار لخدمات الإطفاء: تغيير قواعد الاستجابة للطوارئ",
+          "date": "24 أبريل، 2024",
+          "author": "محمد حسين",
+          "image": "fire_service_drone.jpg",
+          "description": "تعزز الطائرات بدون طيار للإطفاء السلامة والكفاءة من خلال المراقبة الجوية، والتصوير الحراري، وقدرات الاستجابة السريعة."
+        }
+      ]
+    },
+    "teamMoments": {
+      "title": "لحظات فريقنا"
+    },
+    "partners": {
+      "title": "شركاؤنا"
     }
   }
 }
