--- a/src/i18n/bn/translation.json
+++ b/src/i18n/bn/translation.json
@@ -43,6 +43,274 @@
           "image": "project_17.png"
         }
       ]
+    },
+
+    "ormSection": {
+      "title": "এআই ভিত্তিক অনলাইন খ্যাতি এবং ব্যাক অফিস ম্যানেজমেন্ট",
+      "description": "আপনার অনলাইন খ্যাতি পরিচালনা করুন, আস্থা তৈরি করুন, আপনার দর্শকদের সাথে জড়িত থাকুন এবং আপনার ব্র্যান্ডের ইমেজ বাড়ান।",
+      "features": [
+        {
+          "title": "আস্থা এবং বিশ্বাসযোগ্যতা তৈরি করুন",
+          "description": "আপনার দর্শকদের মধ্যে আস্থা এবং বিশ্বাসযোগ্যতা বাড়ানোর জন্য একটি শক্তিশালী অনলাইন উপস্থিতি তৈরি করুন।"
+        },
+        {
+          "title": "আপনার দর্শকদের সাথে জড়িত থাকুন",
+          "description": "রিভিউ, মন্তব্য এবং সামাজিক মিডিয়ার মাধ্যমে গ্রাহকদের সাথে সক্রিয়ভাবে জড়িত থাকুন।"
+        },
+        {
+          "title": "আপনার ব্র্যান্ডের ইমেজ বাড়ান",
+          "description": "ইতিবাচক অভিজ্ঞতা হাইলাইট করে এবং নেতিবাচক প্রতিক্রিয়ার প্রতিক্রিয়া জানিয়ে ব্র্যান্ড ইমেজ উন্নত করুন।"
+        }
+      ],
+      "learnMore": "আরও জানুন"
+    },
+    "bannerDetails": {
+      "title": "আমরা এমন অ্যাপ তৈরি করি যা অ্যাপওয়ার্ল্ডে ট্রেন্ডিং হয়",
+      "description": "বার্ডস অফ এডেন হল একটি উদ্ভাবনী প্রযুক্তি সংস্থা যা উদ্ভাবনী প্রযুক্তি সমাধানের মাধ্যমে ধারণাগুলিকে বাস্তবে রূপ দেওয়ার জন্য নিবেদিত। আমাদের লক্ষ্য হল অত্যাধুনিক সফটওয়্যার দিয়ে ব্যবসা এবং ব্যক্তিদের ক্ষমতায়ন করা যা দক্ষতা, উৎপাদনশীলতা এবং ব্যবহারকারীর অভিজ্ঞতা বাড়ায়।",
+      "features": [
+        "আপনার প্রয়োজন অনুযায়ী কাস্টম সফটওয়্যার ডেভেলপমেন্ট।",
+        "নবীন সমাধান যা বৃদ্ধির গতি বাড়ায়।",
+        "গুণমান এবং ব্যতিক্রমী ব্যবহারকারীর অভিজ্ঞতায় প্রতিশ্রুতি।"
+      ],
+      "getStarted": "শুরু করুন"
+    },
+    "dronePage": {
+      "title": "আমাদের সর্বশেষ প্রযুক্তি",
+      "viewCollections": "সংগ্রহগুলি দেখুন",
+      "viewSpecs": "স্পেসিফিকেশন দেখুন",
+      "specs": {
+        "flightTime": "উড়ানের সময়",
+        "range": "পরিসীমা",
+        "camera": "ক্যামেরা"
+      },
+      "drones": [
+        {
+          "title": "AgriPrecision X1",
+          "description": "উন্নত কৃষি ড্রোন যা মাল্টিস্পেকট্রাল ইমেজিং, সঠিক স্প্রে সিস্টেম এবং AI-চালিত ফসল বিশ্লেষণ সহ সজ্জিত।",
+          "image": "https://images.unsplash.com/photo-1579829366248-204fe8413f31?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80",
+          "specs": {
+            "flightTime": "45 মিনিট",
+            "range": "10 কিমি",
+            "camera": "মাল্টিস্পেকট্রাল + 4K RGB"
+          }
+        }
+      ]
+    },
+    "projectGallery": {
+      "title": "আমাদের প্রজেক্টসমূহ",
+      "description": "আমাদের উদ্ভাবনী সমাধানগুলি আবিষ্কার করুন যা প্রযুক্তির সীমানা বিস্তৃত করে এবং আমাদের ক্লায়েন্টদের জন্য অর্থবহ প্রভাব সৃষ্টি করে।",
+      "modal": {
+        "overview": "ওভারভিউ",
+        "description": "বিবরণ",
+        "close": "বন্ধ করুন"
+      },
+      "projects": [
+        {
+          "title": "পরিচয় যাচাইকরণ",
+          "description": "ট্রেডিং যাচাইয়ের জন্য আপনার পরিচয়ের প্রমাণ আপলোড করুন।",
+          "image": "project_1.png"
+        },
+        {
+          "title": "স্টক মার্কেট ওভারভিউ",
+          "description": "শীর্ষ লাভকারী, শীর্ষ ক্ষতিগ্রস্থ এবং বিস্তারিত বাজার প্রবণতা দেখুন।",
+          "image": "project_2.png"
+        },
+        {
+          "title": "ওয়ালেট এবং লেনদেন ইতিহাস",
+          "description": "আপনার ওয়ালেট পরিচালনা করুন এবং লেনদেনের ইতিহাস দেখুন।",
+          "image": "project_3.png"
+        },
+        {
+          "title": "ই-কমার্স প্ল্যাটফর্ম",
+          "description": "বই কেনার জন্য আধুনিক ই-কমার্স সমাধান।",
+          "image": "project_4.png"
+        },
+        {
+          "title": "বইয়ের সংগ্রহ",
+          "description": "বইয়ের বিশাল সংগ্রহ ব্রাউজ এবং ফিল্টার করুন।",
+          "image": "project_5.png"
+        },
+        {
+          "title": "ড্যাশবোর্ড অ্যানালিটিক্স",
+          "description": "গ্রুপ করা বার এবং লাইন চার্ট সহ ডেটা ভিজ্যুয়ালাইজেশন।",
+          "image": "project_6.png"
+        },
+        {
+          "title": "সুনাম ব্যবস্থাপনা",
+          "description": "আপনার সুনাম নিয়ন্ত্রণ করুন এবং কাস্টমাইজড পরিষেবাগুলি উপভোগ করুন।",
+          "image": "project_7.png"
+        },
+        {
+          "title": "পণ্য প্রদর্শনী",
+          "description": "বিস্তারিত পণ্য প্রদর্শনী এবং প্রচারমূলক ব্যানার।",
+          "image": "project_9.png"
+        },
+        {
+          "title": "মূল্য নির্ধারণ এবং সাবস্ক্রিপশন",
+          "description": "ভিন্ন ব্যবহারকারীর চাহিদার জন্য নমনীয় মূল্য পরিকল্পনা।",
+          "image": "project_10.png"
+        },
+        {
+          "title": "অ্যাকাউন্ট কন্টাক্টস",
+          "description": "অ্যাকাউন্টের যোগাযোগ এবং ব্যবহারকারীর অনুমতি পরিচালনা করুন।",
+          "image": "project_11.png"
+        },
+        {
+          "title": "ড্যাশবোর্ড ওভারভিউ",
+          "description": "উন্নত অ্যানালিটিক্স সহ বিস্তৃত ড্যাশবোর্ড।",
+          "image": "project_12.jpeg"
+        },
+        {
+          "title": "মুভিং খরচ ক্যালকুলেটর",
+          "description": "ইনটুইটিভ ফর্ম দিয়ে মুভিং খরচ হিসাব করুন।",
+          "image": "project_13.jpeg"
+        },
+        {
+          "title": "ক্লায়েন্ট ম্যানেজমেন্ট",
+          "description": "ক্লায়েন্ট ক্যাম্পেইন এবং এনগেজমেন্ট মেট্রিক্সের ওভারভিউ।",
+          "image": "project_14.png"
+        },
+        {
+          "title": "অ্যাকশন সামারি ড্যাশবোর্ড",
+          "description": "কর্ম, কার্যকলাপ এবং সামগ্রিক উৎপাদনশীলতা ট্র্যাক করুন।",
+          "image": "project_15.png"
+        }
+      ]
+    },
+    "clientPage": {
+      "title": "আমাদের ক্লায়েন্টগণ",
+      "clients": [
+        {
+          "name": "আন-নাহল সফটওয়্যার",
+          "description": "আন-নাহল সফটওয়্যার ব্যবসার জন্য অত্যাধুনিক সফটওয়্যার সমাধান প্রদান করে, গুণমান এবং গ্রাহক সন্তুষ্টির উপর জোর দিয়ে।",
+          "logo": "ann-nahl.png",
+          "services": ["সফটওয়্যার ডেভেলপমেন্ট", "পরামর্শ", "কাস্টম সমাধান"],
+          "testimonial": "আন-নাহল সফটওয়্যার আমাদের কাজ করার পদ্ধতিতে পরিবর্তন এনেছে, আমাদের প্রয়োজন অনুসারে উচ্চ-গুণমানের সফটওয়্যার সমাধান সরবরাহ করেছে।"
+        },
+        {
+          "name": "বাজমুভিং",
+          "description": "বাজমুভিং একটি নিরবচ্ছিন্ন স্থানান্তরের অভিজ্ঞতা প্রদান করে, প্রতিটি স্থানান্তর যত্ন এবং সুনির্দিষ্টতার সাথে পরিচালনা করে।",
+          "logo": "buzzmoving.png",
+          "services": [
+            "আবাসিক স্থানান্তর",
+            "বাণিজ্যিক স্থানান্তর",
+            "সংরক্ষণ সেবা"
+          ],
+          "testimonial": "বাজমুভিং আমাদের স্থানান্তরকে চাপমুক্ত করেছে। তাদের দল দক্ষ, পেশাদার এবং নির্ভরযোগ্য।"
+        },
+        {
+          "name": "রেপুটেশন প্রাইম",
+          "description": "রেপুটেশন প্রাইম কৌশলগত রেপুটেশন ম্যানেজমেন্ট সমাধানের মাধ্যমে ব্যবসাগুলিকে শক্তিশালী অনলাইন সুনাম তৈরি এবং বজায় রাখতে সহায়তা করে।",
+          "logo": "repuprime.jpeg",
+          "services": [
+            "রেপুটেশন ম্যানেজমেন্ট",
+            "ব্র্যান্ড মনিটরিং",
+            "সংকট ব্যবস্থাপনা"
+          ],
+          "testimonial": "রেপুটেশন প্রাইম আমাদের ব্র্যান্ড সুনাম এবং অনলাইন বিশ্বাসযোগ্যতা বৃদ্ধিতে গুরুত্বপূর্ণ ভূমিকা পালন করেছে।"
+        },
+        {
+          "name": "সৌদি আরবের স্বাস্থ্য মন্ত্রণালয়",
+          "description": "সৌদি আরবের স্বাস্থ্য মন্ত্রণালয় জনস্বাস্থ্য উন্নত করতে স্বাস্থ্যসেবা, নীতিমালা এবং চিকিৎসা নিয়মাবলী প্রদান করে।",
+          "logo": "moh.png",
+          "services": ["জনস্বাস্থ্য", "চিকিৎসা সেবা", "স্বাস্থ্য নীতিমালা"],
+          "testimonial": "স্বাস্থ্য মন্ত্রণালয় আমাদের স্বাস্থ্যসেবা এবং চিকিৎসা তথ্যের অ্যাক্সেস উন্নত করেছে।"
+        },
+        {
+          "name": "মানব সম্পদ ও সামাজিক উন্নয়ন মন্ত্রণালয়",
+          "description": "মানব সম্পদ ও সামাজিক উন্নয়ন মন্ত্রণালয় একটি শক্তিশালী সমাজ এবং আকর্ষণীয় শ্রম বাজার তৈরির লক্ষ্যে কাজ করে।",
+          "logo": "HRSD.png",
+          "services": ["শ্রম নীতি", "সামাজিক উন্নয়ন", "চাকরির সহায়তা"],
+          "testimonial": "এই মন্ত্রণালয় একটি গতিশীল এবং অন্তর্ভুক্তিমূলক শ্রম বাজার তৈরিতে গুরুত্বপূর্ণ ভূমিকা পালন করেছে।"
+        },
+        {
+          "name": "সৌদি ডেটা এবং এআই অথরিটি (SDAIA)",
+          "description": "SDAIA সৌদি আরবে ডিজিটাল রূপান্তর চালানোর জন্য ডেটা এবং কৃত্রিম বুদ্ধিমত্তার অগ্রগতিতে নিবেদিত।",
+          "logo": "sdaia.png",
+          "services": ["কৃত্রিম বুদ্ধিমত্তা", "বিগ ডেটা", "ডিজিটাল রূপান্তর"],
+          "testimonial": "SDAIA দেশে এআই এবং ডেটা-ভিত্তিক উদ্যোগের বৃদ্ধিতে গুরুত্বপূর্ণ ভূমিকা পালন করেছে।"
+        },
+        {
+          "name": "ওমান বোটানিক গার্ডেন",
+          "description": "ওমান বোটানিক গার্ডেন ওমানের বৈচিত্র্যময় উদ্ভিদজগত প্রদর্শন করে, সংরক্ষণ এবং শিক্ষাকে প্রমোট করে।",
+          "logo": "OBG.png",
+          "services": ["উদ্ভিদ সংরক্ষণ", "পরিবেশ শিক্ষা", "পর্যটন"],
+          "testimonial": "ওমান বোটানিক গার্ডেন ওমানের জীববৈচিত্র্যে একটি বিস্ময়কর অভিজ্ঞতা প্রদান করে।"
+        },
+        {
+          "name": "রয়্যাল অপেরা হাউস মাসকাট",
+          "description": "রয়্যাল অপেরা হাউস মাসকাট ওমানের প্রিমিয়ার সংগীত ও সাংস্কৃতিক অনুষ্ঠান স্থান, যা শৈল্পিক উৎকর্ষতাকে প্রমোট করে।",
+          "logo": "ROHM.png",
+          "services": [
+            "পারফর্মিং আর্টস",
+            "সাংস্কৃতিক অনুষ্ঠান",
+            "সংগীত শিক্ষা"
+          ],
+          "testimonial": "রয়্যাল অপেরা হাউস মাসকাট একটি সাংস্কৃতিক রত্ন, যা বিশ্বমানের পারফরম্যান্স ওমানে নিয়ে আসে।"
+        },
+        {
+          "name": "বাংলাদেশ সরকার",
+          "description": "বাংলাদেশ সরকারের অফিশিয়াল পোর্টাল নাগরিক, ব্যবসা এবং দর্শকদের জন্য তথ্য এবং সেবা প্রদান করে।",
+          "logo": "bangovt.png",
+          "services": ["সরকারি সেবা", "প্রশাসন", "ই-গভর্নেন্স"],
+          "testimonial": "বাংলাদেশ সরকার পোর্টাল প্রয়োজনীয় সরকারি সেবা পাওয়ার অভিজ্ঞতাকে নিরবচ্ছিন্ন করেছে।"
+        },
+        {
+          "name": "মুভিং কোট নিউইয়র্ক",
+          "description": "নিউইয়র্ক কোট টেক্সাস প্রতিযোগিতামূলক বীমা কোট সরবরাহ করে, ব্যক্তিগত এবং ব্যবসায়িকদের সেরা নীতি সুরক্ষায় সহায়তা করে।",
+          "logo": "logo-png.png",
+          "services": ["বীমা কোট", "আর্থিক পরিকল্পনা", "ঝুঁকি মূল্যায়ন"],
+          "testimonial": "নিউইয়র্ক কোট টেক্সাস আমাদের জন্য উপযুক্ত বীমা পরিকল্পনা খুঁজতে সহায়ক হয়েছে।"
+        },
+        {
+          "name": "মুভিং টেক্সাস",
+          "description": "মুভিং টেক্সাস আবাসিক এবং বাণিজ্যিক ক্লায়েন্টদের জন্য সর্বোচ্চ মানের স্থানান্তর পরিষেবা প্রদান করে।",
+          "logo": "moving-texas.png",
+          "services": [
+            "আবাসিক স্থানান্তর",
+            "বাণিজ্যিক স্থানান্তর",
+            "সংরক্ষণ সেবা"
+          ],
+          "testimonial": "মুভিং টেক্সাস আমাদের স্থানান্তরকে মসৃণ এবং ঝামেলামুক্ত করেছে, তাদের পেশাদার এবং নির্ভরযোগ্য দলের সাথে।"
+        }
+      ]
+    },
+    "blogPage": {
+      "title": "আমাদের সর্বশেষ ব্লগ",
+      "by": "লেখক",
+      "readMore": "আরও পড়ুন",
+      "blogs": [
+        {
+          "id": 1,
+          "title": "ব্যবসায়িক বৃদ্ধির জন্য ERP সমাধানের শক্তি",
+          "date": "১৫ ফেব্রুয়ারি, ২০২৪",
+          "author": "জুলফিকার",
+          "image": "erp.png",
+          "description": "জানুন কিভাবে ERP সমাধান ব্যবসার প্রক্রিয়া সহজতর করে, দক্ষতা বাড়ায় এবং ডিজিটাল যুগে সাফল্য অর্জনে সহায়তা করে।"
+        },
+        {
+          "id": 2,
+          "title": "কৃষিতে ড্রোন প্রযুক্তির বিপ্লব",
+          "date": "১০ মার্চ, ২০২৪",
+          "author": "জিসান",
+          "image": "agricultural_drone.jpg",
+          "description": "কৃষিক্ষেত্রে ড্রোন সঠিক স্প্রে, ফসলের পর্যবেক্ষণ এবং উন্নত উৎপাদনশীলতার মাধ্যমে বিপ্লব ঘটাচ্ছে।"
+        },
+        {
+          "id": 3,
+          "title": "দমকল পরিষেবার জন্য ড্রোন: জরুরি সেবার গেম-চেঞ্জার",
+          "date": "২৪ এপ্রিল, ২০২৪",
+          "author": "মো. হোসেন",
+          "image": "fire_service_drone.jpg",
+          "description": "দমকল ড্রোনগুলি বায়বীয় নজরদারি, তাপীয় ইমেজিং এবং দ্রুত প্রতিক্রিয়া ক্ষমতা প্রদান করে নিরাপত্তা এবং দক্ষতা বৃদ্ধি করে।"
+        }
+      ]
+    },
+    "teamMoments": {
+      "title": "আমাদের টিম মোমেন্টস"
+    },
+    "partners": {
+      "title": "আমাদের অংশীদার"
     }
   }
 }
