--- a/src/i18n/ja/translation.json
+++ b/src/i18n/ja/translation.json
@@ -43,6 +43,265 @@
           "image": "project_17.png"
         }
       ]
+    },
+    "ormSection": {
+      "title": "AI ベースのオンライン評判とバックオフィスマネジメント",
+      "description": "オンラインの評判を管理して信頼を築き、オーディエンスとエンゲージメントを図り、ブランドイメージを向上させます。",
+      "features": [
+        {
+          "title": "信頼と信用を築く",
+          "description": "強力なオンラインプレゼンスを確立して、オーディエンスの信頼と信用を高めます。"
+        },
+        {
+          "title": "オーディエンスとエンゲージメントを図る",
+          "description": "レビュー、コメント、ソーシャルメディアを通じて顧客と積極的にエンゲージメントを図ります。"
+        },
+        {
+          "title": "ブランドイメージを向上させる",
+          "description": "ポジティブな体験を強調し、ネガティブなフィードバックに対応することでブランドイメージを改善します。"
+        }
+      ],
+      "learnMore": "もっと知る"
+    },
+    "bannerDetails": {
+      "title": "私たちはアプリワールドでトレンドになるアプリを構築します",
+      "description": "Birds OF EDENは、革新的なテクノロジーソリューションを通じてアイデアを現実に変えることに専念している最先端のソフトウェア会社です。私たちの使命は、効率、生産性、ユーザーエクスペリエンスを向上させる最先端のソフトウェアで企業と個人を支援することです。",
+      "features": [
+        "あなたのニーズに合わせた専門的なソフトウェア開発。",
+        "成長と成功を促進する革新的なソリューション。",
+        "品質と優れたユーザーエクスペリエンスへのコミットメント。"
+      ],
+      "getStarted": "始める"
+    },
+    "dronePage": {
+      "title": "最新のテクノロジー",
+      "viewCollections": "コレクションを見る",
+      "viewSpecs": "仕様を見る",
+      "specs": {
+        "flightTime": "飛行時間",
+        "range": "範囲",
+        "camera": "カメラ"
+      },
+      "drones": [
+        {
+          "title": "AgriPrecision X1",
+          "description": "マルチスペクトルイメージングとAI駆動の作物分析を備えた高度な農業用ドローン。",
+          "image": "https://images.unsplash.com/photo-1579829366248-204fe8413f31?ixlib=rb-1.2.1&auto=format&fit=crop&w=1200&q=80",
+          "specs": {
+            "flightTime": "45分",
+            "range": "10 km",
+            "camera": "マルチスペクトル + 4K RGB"
+          }
+        }
+      ]
+    },
+    "projectGallery": {
+      "title": "私たちのプロジェクト",
+      "description": "技術の境界を押し広げ、クライアントに意義のある影響を与える革新的なソリューションを発見してください。",
+      "modal": {
+        "overview": "概要",
+        "description": "説明",
+        "close": "閉じる"
+      },
+      "projects": [
+        {
+          "title": "本人確認",
+          "description": "取引確認のために本人確認書類をアップロードしてください。",
+          "image": "project_1.png"
+        },
+        {
+          "title": "株式市場の概要",
+          "description": "トップゲイナー、トップルーザー、詳細な市場動向を確認。",
+          "image": "project_2.png"
+        },
+        {
+          "title": "ウォレットと取引履歴",
+          "description": "ウォレットを管理し、取引履歴を表示します。",
+          "image": "project_3.png"
+        },
+        {
+          "title": "Eコマースプラットフォーム",
+          "description": "書籍購入のための最新のEコマースソリューション。",
+          "image": "project_4.png"
+        },
+        {
+          "title": "書店コレクション",
+          "description": "豊富な書籍コレクションを閲覧し、フィルタリングします。",
+          "image": "project_5.png"
+        },
+        {
+          "title": "ダッシュボード分析",
+          "description": "グループ化されたバーと折れ線グラフによるデータの可視化。",
+          "image": "project_6.png"
+        },
+        {
+          "title": "評判管理",
+          "description": "カスタマイズされたサービスで評判を管理します。",
+          "image": "project_7.png"
+        },
+        {
+          "title": "製品展示",
+          "description": "詳細な製品表示とプロモーションバナー。",
+          "image": "project_9.png"
+        },
+        {
+          "title": "価格設定とサブスクリプション",
+          "description": "さまざまなユーザーのニーズに合わせた柔軟な価格プラン。",
+          "image": "project_10.png"
+        },
+        {
+          "title": "アカウント連絡先",
+          "description": "アカウントの連絡先とユーザーの権限を管理します。",
+          "image": "project_11.png"
+        },
+        {
+          "title": "ダッシュボードの概要",
+          "description": "高度な分析機能を備えた包括的なダッシュボード。",
+          "image": "project_12.jpeg"
+        },
+        {
+          "title": "引越し費用計算機",
+          "description": "直感的なフォームを使用して引越し費用を計算します。",
+          "image": "project_13.jpeg"
+        },
+        {
+          "title": "クライアント管理",
+          "description": "クライアントキャンペーンとエンゲージメント指標の概要。",
+          "image": "project_14.png"
+        },
+        {
+          "title": "アクションサマリーダッシュボード",
+          "description": "タスク、アクティビティ、および全体的な生産性を追跡します。",
+          "image": "project_15.png"
+        }
+      ]
+    },
+    "clientPage": {
+      "title": "クライアント一覧",
+      "clients": [
+        {
+          "name": "アンナールソフトウェア",
+          "description": "アンナールソフトウェアは、品質と顧客満足を重視した最先端のソフトウェアソリューションを提供しています。",
+          "logo": "ann-nahl.png",
+          "services": [
+            "ソフトウェア開発",
+            "コンサルティング",
+            "カスタムソリューション"
+          ],
+          "testimonial": "アンナールソフトウェアのおかげで、業務の進め方が劇的に改善され、私たちのニーズに合った高品質のソフトウェアソリューションを提供してくれました。"
+        },
+        {
+          "name": "バズムービング",
+          "description": "バズムービングは、すべての引越しを丁寧かつ正確に処理し、シームレスな引越し体験を提供します。",
+          "logo": "buzzmoving.png",
+          "services": ["住宅の引越し", "商業の引越し", "保管サービス"],
+          "testimonial": "バズムービングのおかげで、引越しがストレスフリーに。彼らのチームは効率的でプロフェッショナル、そして信頼できます。"
+        },
+        {
+          "name": "レピュテーションプライム",
+          "description": "レピュテーションプライムは、戦略的なレピュテーション管理ソリューションを通じて、強力なオンライン評判の構築と維持をサポートします。",
+          "logo": "repuprime.jpeg",
+          "services": [
+            "レピュテーション管理",
+            "ブランドモニタリング",
+            "危機管理"
+          ],
+          "testimonial": "レピュテーションプライムは、私たちのブランドの評判とオンラインでの信頼性向上に貴重な役割を果たしました。"
+        },
+        {
+          "name": "サウジアラビア保健省",
+          "description": "サウジアラビア保健省は、公衆衛生を向上させるための医療サービス、政策、医療規制を提供しています。",
+          "logo": "moh.png",
+          "services": ["公衆衛生", "医療サービス", "医療政策"],
+          "testimonial": "保健省のおかげで、医療サービスと医療情報へのアクセスが大幅に向上しました。"
+        },
+        {
+          "name": "人的資源・社会開発省",
+          "description": "人的資源・社会開発省は、繁栄する社会と魅力的な労働市場を目指して活動しています。",
+          "logo": "HRSD.png",
+          "services": ["労働政策", "社会開発", "雇用支援"],
+          "testimonial": "この省のおかげで、よりダイナミックで包括的な労働市場が創出されました。"
+        },
+        {
+          "name": "サウジデータ・AI局 (SDAIA)",
+          "description": "SDAIAは、サウジアラビアでのデジタル変革を推進するために、データと人工知能のソリューションを促進しています。",
+          "logo": "sdaia.png",
+          "services": ["人工知能", "ビッグデータ", "デジタル変革"],
+          "testimonial": "SDAIAは、国内におけるAIとデータ駆動型の取り組みの成長に大きく貢献しています。"
+        },
+        {
+          "name": "オマーン植物園",
+          "description": "オマーン植物園は、オマーンの多様な植物を展示し、保存と教育を推進しています。",
+          "logo": "OBG.png",
+          "services": ["植物の保護", "環境教育", "観光"],
+          "testimonial": "オマーン植物園は、オマーンの豊かな生物多様性を体験する素晴らしい場所です。"
+        },
+        {
+          "name": "ロイヤルオペラハウスマスカット",
+          "description": "ロイヤルオペラハウスマスカットは、オマーンの音楽と文化の最高の舞台であり、芸術の卓越性を推進しています。",
+          "logo": "ROHM.png",
+          "services": ["舞台芸術", "文化イベント", "音楽教育"],
+          "testimonial": "ロイヤルオペラハウスマスカットは、世界クラスのパフォーマンスをオマーンにもたらす文化的な宝石です。"
+        },
+        {
+          "name": "バングラデシュ政府",
+          "description": "バングラデシュ政府の公式ポータルは、市民、ビジネス、訪問者向けに情報とサービスを提供しています。",
+          "logo": "bangovt.png",
+          "services": ["政府サービス", "公共管理", "電子政府"],
+          "testimonial": "バングラデシュ政府のポータルは、重要な政府サービスへのアクセスをスムーズにしています。"
+        },
+        {
+          "name": "ムービングクオートニューヨーク",
+          "description": "ムービングクオートニューヨークは、競争力のある保険見積もりを提供し、最適な保険プランを見つける手助けをします。",
+          "logo": "logo-png.png",
+          "services": ["保険見積もり", "財務計画", "リスク評価"],
+          "testimonial": "ムービングクオートニューヨークは、私たちに最適な保険プランを見つけるのに大変役立ちました。"
+        },
+        {
+          "name": "ムービングテキサス",
+          "description": "ムービングテキサスは、州全体の住宅および商業クライアント向けに高品質の引越しサービスを提供しています。",
+          "logo": "moving-texas.png",
+          "services": ["住宅の引越し", "商業の引越し", "保管ソリューション"],
+          "testimonial": "ムービングテキサスのおかげで、プロフェッショナルで信頼性の高いチームのおかげで、引越しがスムーズでストレスフリーになりました。"
+        }
+      ]
+    },
+    "blogPage": {
+      "title": "最新のブログ",
+      "by": "著者",
+      "readMore": "続きを読む",
+      "blogs": [
+        {
+          "id": 1,
+          "title": "ビジネス成長のためのERPソリューションの力",
+          "date": "2024年2月15日",
+          "author": "ズルフィカー",
+          "image": "erp.png",
+          "description": "ERPソリューションが業務プロセスを効率化し、生産性を向上させ、デジタル時代に成功をもたらす方法を探る。"
+        },
+        {
+          "id": 2,
+          "title": "農業用ドローンが農業をどのように変革しているか",
+          "date": "2024年3月10日",
+          "author": "ジサン",
+          "image": "agricultural_drone.jpg",
+          "description": "農業用ドローンは、精密散布、作物監視、生産性向上により農業に革命をもたらしています。"
+        },
+        {
+          "id": 3,
+          "title": "消防サービス用ドローン：緊急対応のゲームチェンジャー",
+          "date": "2024年4月24日",
+          "author": "モハメド・ホセイン",
+          "image": "fire_service_drone.jpg",
+          "description": "消防ドローンは、空中監視、熱画像、迅速な対応機能を提供することで安全性と効率を向上させます。"
+        }
+      ]
+    },
+    "teamMoments": {
+      "title": "チームの瞬間"
+    },
+    "partners": {
+      "title": "パートナー"
     }
   }
 }
